<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/background" >
<ScrollView 
    android:layout_weight="1"
    android:layout_width="fill_parent"
    android:layout_height="0dp" >
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >
	    <TextView
	        android:id="@+id/personText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="@style/boldFont"
	        android:layout_marginBottom="5dip"
	        android:layout_marginTop="5dip"
	        android:layout_marginLeft="5dip"
	        android:text="@string/person" />
	    <EditText
	        android:id="@+id/person"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textCapSentences"
	        style="@style/itemFont"
	        android:layout_marginBottom="10dip"
	        android:background="@android:drawable/editbox_background"
	        android:ems="10" />
	    <TextView
	        android:id="@+id/descriptionText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="@style/boldFont"
	        android:layout_marginBottom="5dip"
	        android:layout_marginLeft="5dip"
	        android:text="@string/description" />
	    <EditText
	        android:id="@+id/description"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textCapSentences"
	        style="@style/itemFont"
	        android:layout_marginBottom="10dip"
	        android:background="@android:drawable/editbox_background"
	        android:scrollbars="vertical" />
	    <TextView
	        android:id="@+id/amountText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="@style/boldFont"
	        android:layout_marginBottom="5dip"
	        android:layout_marginLeft="5dip"
	        android:text="@string/amount" />
	    <EditText
	        android:id="@+id/amount"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="@style/itemFont"
	        android:layout_marginBottom="5dip"
	        android:background="@android:drawable/editbox_background"
	        android:ems="10"
	        android:inputType="numberDecimal" >
	        <requestFocus />
	    </EditText>
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >
	        <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        style="@style/boldFont"
		        android:layout_marginLeft="5dip"
		        android:text="@string/alarmCheckBox" />
		    <CheckBox
		        android:id="@+id/alarmCheckBox"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text=""
		        android:checked="false" />
	    </LinearLayout>
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >
	        <Button
		        android:id="@+id/pickDate"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="left"
		        android:enabled="false"
		        style="@style/buttonStyle"
		        android:text="@string/dateSet" />
		    <TextView
		        android:id="@+id/dateDisplay"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="right"
		        style="@style/boldFont"
		        android:layout_marginTop="10dip"
		        android:layout_marginLeft="5dip"
		        android:text="" />
	    </LinearLayout>
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >
		    <Button
		        android:id="@+id/pickTime"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="left"
		        android:paddingBottom="10dp"
		        android:enabled="false"
		        style="@style/buttonStyle"
		        android:text="@string/timeSet" />
		    <TextView
		        android:id="@+id/timeDisplay"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="right"
		        style="@style/boldFont"
		        android:paddingBottom="10dp"
		        android:layout_marginLeft="5dip"
		        android:text="" />
	    </LinearLayout>
	</LinearLayout>
</ScrollView>
	<Button
		android:id="@+id/confirm"
	    style="@style/buttonStyle"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/confirm"
	    android:paddingBottom="5dp" />
</LinearLayout>