<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background" >  
    <TextView 
  	     android:id="@+id/nameColum"
  	     style="@style/boldFont"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="17dip"
         android:layout_marginLeft="5dip"
         android:text="@string/name_colum"/>
    <TextView
  	     android:id="@+id/amountColum"
  	     style="@style/boldFont"
  	     android:textStyle="bold"
  	     android:layout_width="wrap_content"
  	     android:layout_height="wrap_content"
  	     android:layout_marginTop="15dip"
  	     android:layout_alignParentRight="true"
  	     android:layout_alignParentTop="true"
  	     android:layout_marginRight="5dip"
  	     android:text="@string/amount_colum" />
     <View
        android:id="@+id/listDivider1"
		android:layout_width="fill_parent"
		android:layout_height="5sp"
		android:layout_marginTop="5dip"
		android:layout_marginBottom="10dip"
		android:layout_below="@id/nameColum"
		android:background="@drawable/divider_background" />
     <ListView 
         android:id="@+id/android:list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/nameColum"
         android:layout_marginTop="10dip" />
  	 <TextView 
  	     android:id="@+id/android:empty"
  	     style="@style/itemFont"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/nameColum"
         android:layout_marginTop="10dip"
         android:text="@string/no_loans"/>
  	 <View
  	    android:id="@+id/listDivider2"
		android:layout_width="fill_parent"
		android:layout_height="5sp"
		android:layout_marginTop="5dip"
		android:layout_marginBottom="10dip"
		android:layout_below="@id/android:list"
		android:background="@drawable/divider_background" />
  	 <TextView 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/boldFont"
         android:layout_below="@id/listDivider2"
         android:layout_marginTop="10dip"
         android:layout_marginLeft="5dip"
         android:text="@string/total_amount" />
  	 <TextView
  	     android:id="@+id/totalAmount"
		 android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/boldFont"
         android:layout_below="@id/listDivider2"
         android:layout_alignParentRight="true"
         android:layout_marginTop="10dip"
         android:layout_marginLeft="5dip"
         android:text="" />
</RelativeLayout>